[RLS] Do not use scrollbar-excluded overflow clip at the root

Clip paint property nodes store a rect for the clip excluding overlay
scrollbars. When overlay scrollbars appear or disappear, the associated
clip node needs to be updated. Changing a clip node is expensive because
a full treewalk is needed to ensure descendant clip caches are cleared.

This patch special-cases the topmost clip node to not store a clip
excluding overlay scrollbars. With this patch, the common operation of
showing/hiding overlay scrollbars does not cause a full treewalk.

Bug: 823999
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I605fa3dea5c33e0cbd0de314b915fd6526d64f1a
Reviewed-on: https://chromium-review.googlesource.com/999053
Commit-Queue: Philip Rogers <pdr@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548960}
Former-commit-id: 86d1cc1b33260b95367afdedb6195c842dc8e5c0